feat: control of actions(be able to change if some action can effect streak, achievements etc.)
