# internal/domain/models/ActionRules.go
@@ -1,0 +1,6 @@
+package models
+
+type ActionRule struct {
+	Action Actions
+	Rules  map[ActionTrigger]bool
+}
