# internal/presentation/dto/actionRule.go
@@ -1,0 +1,6 @@
+package dto
+
+type ActionRuleDTO struct {
+	Action string          `json:"action" binding:"required"`
+	Rules  map[string]bool `json:"rules" binding:"required"`
+}
