# internal/presentation/dto/userActivity.go
@@ -1,12 +1,15 @@
 package dto
 
-import "time"
+import (
+	"DaraTilBackendV2/internal/domain/models"
+	"time"
+)
 
 type UserActivityDTO struct {
-	ID         uint      `json:"id"`
-	Time       time.Time `json:"time"`
-	Action     string    `json:"action"`
-	UserID     uint      `json:"userID"`
-	EntityType string    `json:"entityType"`
-	EntityID   uint      `json:"entityID"`
+	ID         uint                   `json:"id"`
+	Time       time.Time              `json:"time"`
+	Action     string                 `json:"action"`
+	UserID     uint                   `json:"userID"`
+	EntityType models.EventEntityType `json:"entityType"`
+	EntityID   uint                   `json:"entityID"`
 }
